--- a/index.html
+++ b/index.html
@@ -5,10 +5,160 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body>
+  <header>
+    <div class="header__inner">
+      <div class="navigation container">
+        <div class="website-logo">
+          <a href="#"><img src="asset/logo.png" alt="logo"></a>
+        </div>
+        <label for="check" id="hamburger-icon"><i class="fa fa-bars"></i></label>
+        <input type="checkbox" id="check" name="menu-bar" value="">
+        <nav class="navbar-items">
+          <ul>
+            <li><a href="#" class="item-links">HOME</a></li>
+            <li><a href="#contact" class="item-links">PRODUCT</a></li>
+            <li><a href="#contact" class="item-links">PROMO</a></li>
+            <li><a href="#contact" class="item-links">ABOUT</a></li>
+            <li><a href="#contact" class="item-links">CONTACT</a></li>
+            <li><a href=""><img src="asset/bag_icon.png" alt="bag" class="icon"></a></li>
+            <li><a href=""><img src="asset/search_icon.png" alt="search" class="icon"></a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main>
+    <header>
+      <div class="container">
+        <article>
+          <h1>Get Cashback up to 50%</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse consectetur justo
+            eu nunc consequat.
+          </p>
+          <a href="#" class="btn">ORDER NOW</a>
+        </article>
+        <img src="./asset/banner_image.png" alt="Burger" class="banner_image">
+      </div>
+    </header>
+    <section class="second-section">
+      <div class="container ">
+        <img src="./asset/bestburger.jpg" alt="Best Burger">
+        <article>
+          <h2>Best Burger</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Vivamus lacinia odio vitae vestibulum vestibulum.
+          </p>
+          <a href="#">ORDER NOW</a>
+        </article>
+      </div>
+    </section>
+    <section class="popular-package-section">
+      <h2>Popular Package</h2>
+      <div class="package-list container">
+        <article class="package-item">
+          <h3>PACKAGE I</h3>
+          <img src="asset/Package_1_icon.png" alt="burger-package">
+          <span>$10.00</span>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <button>ORDER NOW</button>
+        </article>
+        <article class="package-item">
+          <h3>PACKAGE II</h3>
+          <img src="asset/Package_2_icon.png" alt="burger-package">
+          <span>$20.00</span>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <button>ORDER NOW</button>
+        </article>
+        <article class="package-item">
+          <h3>PACKAGE III</h3>
+          <img src="asset/Package_3_icon.png" alt="burger-package">
+          <span>$30.00</span>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <button>ORDER NOW</button>
+        </article>
+      </div>
+    </section>
+    <section class="stats">
+      <section class="stats-section container">
+      <h3>Statistics</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam dolor
+        explicabo voluptatibus nemo?
+      </p>
+      <div class="stats-info">
+        <div class="stats-info-item">
+          <span class="numeric-value">7K</span>
+          <span class="stats-text">CUSTOMER</span>
+        </div>
+        <div class="stats-info-item">
+          <span class="numeric-value">109</span>
+          <span class="stats-text">OUTLETS</span>
+        </div>
+        <div class="stats-info-item">
+          <span class="numeric-value">35</span>
+          <span class="stats-text">COUNTRY</span>
+        </div>
+      </div>
+      </section>
+    </section>  
+  </main>
+  <footer>
+    <section class="container">
+      <div>
+        <h2>Title Here</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, perferendis? Consectetur cum optio
+          quidem vel laudantium facilis at consequuntur ipsum ullam voluptas, odio harum fugiat rerum doloremque? Ut,
+          voluptatibus ullam!</p>
+        <div class="social-icons">
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-whatsapp"></i>
+          <i class="fa-brands fa-facebook"></i>
+        </div>
+      </div>
+      <ul>
+        <li>
+          <h2>About</h2>
+          <ul>
+            <li>History</li>
+            <li>Our Team</li>
+            <li>Brand Guidelines</li>
+            <li>Terms & Condition</li>
+            <li>Privacy Policy</li>
+          </ul>
+        </li>
 
+        <li>
+          <h2>Services</h2>
+          <ul>
+            <li>History</li>
+            <li>Our Team</li>
+            <li>Brand Guidelines</li>
+            <li>Terms & Condition</li>
+            <li>Privacy Policy</li>
+          </ul>
+        </li>
+        
+        <li>
+          <h2>Others</h2>
+          <ul>
+            <li>History</li>
+            <li>Our Team</li>
+            <li>Brand Guidelines</li>
+            <li>Terms & Condition</li>
+            <li>Privacy Policy</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <small>Copyright &copy; BURGER.com</small>
+  </footer>
 </body>
 
 </html>
