--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Burger</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -22,12 +21,12 @@
         <nav class="navbar-items">
           <ul>
             <li><a href="#" class="item-links">HOME</a></li>
-            <li><a href="#contact" class="item-links">PRODUCT</a></li>
-            <li><a href="#contact" class="item-links">PROMO</a></li>
-            <li><a href="#contact" class="item-links">ABOUT</a></li>
-            <li><a href="#contact" class="item-links">CONTACT</a></li>
-            <li><a href=""><img src="asset/bag_icon.png" alt="bag" class="icon"></a></li>
-            <li><a href=""><img src="asset/search_icon.png" alt="search" class="icon"></a></li>
+            <li><a href="#product" class="item-links">PRODUCT</a></li>
+            <li><a href="#" class="item-links">PROMO</a></li>
+            <li><a href="#" class="item-links">ABOUT</a></li>
+            <li><a href="#" class="item-links">CONTACT</a></li>
+            <li><a href="#"><img src="asset/bag_icon.png" alt="bag" class="icon"></a></li>
+            <li><a href="#"><img src="asset/search_icon.png" alt="search" class="icon"></a></li>
           </ul>
         </nav>
       </div>
@@ -58,7 +57,7 @@
         </article>
       </div>
     </section>
-    <section class="popular-package-section">
+    <section class="popular-package-section" id="product">
       <h2>Popular Package</h2>
       <div class="package-list container">
         <article class="package-item">
